whoami/04-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.skynewz.cloud`)
      kind: Rule
      services:
        - name: whoami
          port: 80
